# gravisCGBR

./: .gitignore  Cargo.toml  README.md  build.rs  cgbr-400x400px.psd  config.json
.github/: FUNDING.yml
src/: main.rs
src/config/: entity.rs  mod.rs
src/home/: mod.rs
src/migrations/: mod.rs
src/sat/: common.rs  consultar_sat.rs  consultar_status_operacional.rs  entity.rs  mod.rs
src/tasks/: mod.rs
src/tests/: mod.rs
