[package]
name = "gravis_cgbr"
version = "1.0.1"
authors = ["Gravis Tec - Gustavo Ota<gustavo@gravis.com.br>"]
description = "Gravis CGBR - Sistemas de Gestão Comercial ERP"
license-file = "LICENSE.txt"
edition = "2021"
build = "build.rs"

[package.metadata.winres]
OriginalFilename = "gravis_cgbr.exe"

[build-dependencies]
winres = "0.1"
winapi = { version = "0.3.9", features = ["winnt"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.4"
mysql = "24.0.0"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
zip-extract = "0.1.2"
tokio = { version = "1.33.0", features = ["full"] }
chrono = "0.4.31"
sha1 = "0.10.6"
sysinfo = "0.29.10"
winapi = { version = "0.3.9", features = ["winuser"] }
colored = "2.0.4"
printpdf = { version = "0.7.0", features = ["embedded_images"] }
barcoders = { version = "1.0.2", features = ["image"] }
lettre = "0.11.6"
lettre_email = "0.9.4"
fs_extra = "1.3.0"
zip_archive = "1.2.2"
num_cpus = "1.16.0"
zip = "0.6.6"
base64 = "0.22.0"
rand = "0.8.5"
libloading = "0.8.5"
